# maco

./: .gitignore  CMakeLists.txt  README.md
doc/source/: conf.py  expand.rst  index.rst
doc/source/_ext/: CppTransDslLexer.py
include/maco/: aggregate.h  arguments.h  basic.h  compare.h  condition.h  condtion.h  config.h  foreach.h  foreach_2.h  index_seq.h  int_succ.h  iterator_0.h  iterator_1.h  loop.h  map.h  map_2.h  natural.h  natural_num.h  parameter.h  pp_size.h  repeat_call.h  repeat_call_2.h  repeats.h  repeats_0.h  repeats_1.h
include/maco/detail/: eval.h  eval_2.h  int_prev.h  int_succ.h  iterator_0.h  loop.h  map.h  map_2.h  pp_size.h  repeat_call.h  repeat_call_2.h  repeats_0.h  repeats_1.h
include/maco/meta/: lock_meta_data.h  meta_data_common.h  ro_meta_data.h
script/: gen_eval.py  gen_eval_2.py  gen_pp_size.py  gen_prev.py  gen_repeat_0.py  gen_repeat_1.py  gen_repeat_call.py  gen_repeat_call_2.py  gen_repeats.py  gen_succ.py
tests/: catch.cpp  catch.hpp  test_maco.cpp
